Applied codestyle fixes comlying our codestyle rules