@@ -40,6 +40,7 @@ public class Operator_mul implements IOperator {
         super();
     }
 
+    @Override
     public void execute(Handler handler) {
         Number element1;
         Number element2;
@@ -47,7 +48,7 @@ public class Operator_mul implements IOperator {
         element2 = (Number) handler.pop();
         element1 = (Number) handler.pop();
         if (element1 instanceof Integer && element2 instanceof Integer) {
-            handler.push(new Integer(element1.intValue() * element2.intValue()));
+            handler.push(Integer.valueOf(element1.intValue() * element2.intValue()));
             return;
         }
         handler.push(new Double(element1.doubleValue() * element2.doubleValue()));
