@@ -40,6 +40,7 @@ public class Operator_xor implements IOperator {
         super();
     }
 
+    @Override
     public void execute(Handler handler) throws ParseException {
         Object element1;
         Object element2;
@@ -47,10 +48,10 @@ public class Operator_xor implements IOperator {
         element2 = handler.pop();
         element1 = handler.pop();
         if (element1 instanceof Integer && element2 instanceof Integer) {
-            handler.push(new Integer(((Integer) element1).intValue() ^ ((Integer) element2).intValue()));
+            handler.push(Integer.valueOf(((Integer) element1).intValue() ^ ((Integer) element2).intValue()));
         }
         if (element1 instanceof Boolean && element2 instanceof Boolean) {
-            handler.push(new Boolean(((Boolean) element1).booleanValue() ^ ((Boolean) element2).booleanValue()));
+            handler.push(Boolean.valueOf(((Boolean) element1).booleanValue() ^ ((Boolean) element2).booleanValue()));
         }
         throw new ParseException();
     }
